--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 						<div class="reply-panel">
 							<a href="#" class="reply simptip-position-bottom simptip-movable" data-tooltip="quote reply" reply-type="quote"><i class="foundicon-quote"></i></a>
 							<a href="#" class="reply simptip-position-bottom simptip-movable" data-tooltip="reply" reply-type="no-quote"><i class="foundicon-left-arrow"></i></a>
-							<a href="#" class="simptip-position-bottom simptip-movable" data-tooltip="conversation"><i class="foundicon-people"></i></a>
+							<a href="#" class="show-conversation simptip-position-bottom simptip-movable" data-tooltip="conversation"><i class="foundicon-people"></i></a>
 							{{#is-own-message}}
 							<a href="#" class="remove simptip-position-bottom simptip-movable" data-tooltip="remove"><i class="foundicon-trash"></i></a>
 							{{/is-own-message}}
@@ -225,7 +225,6 @@
 						<div class="reply-panel">
 							<a href="#" class="reply simptip-position-bottom simptip-movable" data-tooltip="quote reply" reply-type="quote"><i class="foundicon-quote"></i></a>
 							<a href="#" class="reply simptip-position-bottom simptip-movable" data-tooltip="reply" reply-type="no-quote"><i class="foundicon-left-arrow"></i></a>
-							<a href="#" class="simptip-position-bottom simptip-movable" data-tooltip="conversation"><i class="foundicon-people"></i></a>
 							{{#is-own-message}}
 							<a href="#" class="remove simptip-position-bottom simptip-movable" data-tooltip="remove"><i class="foundicon-trash"></i></a>
 							{{/is-own-message}}
@@ -266,7 +265,6 @@
 						<div class="reply-panel">
 							<a href="#" class="reply simptip-position-bottom simptip-movable" data-tooltip="quote reply" reply-type="quote"><i class="foundicon-quote"></i></a>
 							<a href="#" class="reply simptip-position-bottom simptip-movable" data-tooltip="reply" reply-type="no-quote"><i class="foundicon-left-arrow"></i></a>
-							<a href="#" class="simptip-position-bottom simptip-movable" data-tooltip="conversation"><i class="foundicon-people"></i></a>
 							{{#is-own-message}}
 							<a href="#" class="remove simptip-position-bottom  simptip-movable" data-tooltip="remove"><i class="foundicon-trash"></i></a>
 							{{/is-own-message}}
@@ -385,7 +383,6 @@
 					<div class="reply-panel">
 						<a href="#" class="reply simptip-position-bottom simptip-movable" data-tooltip="quote reply" reply-type="quote"><i class="foundicon-quote"></i></a>
 						<a href="#" class="reply simptip-position-bottom simptip-movable" data-tooltip="reply" reply-type="no-quote"><i class="foundicon-left-arrow"></i></a>
-						<a href="#" class="simptip-position-bottom simptip-movable" data-tooltip="conversation"><i class="foundicon-people"></i></a>
 						{{#is-own-message}}
 						<a href="#" class="remove simptip-position-bottom simptip-movable" data-tooltip="remove"><i class="foundicon-trash"></i></a>
 						{{/is-own-message}}
