notification permission is saved at localStorage

--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
 		<script src="js/callback.js"></script>
 		<script src="js/desktop-notification.js"></script>
 		<script src="js/myutil.js"></script>
+		<script src="js/atmos-settings.js"></script>
 		<script src="js/atmos-search-condition.js"></script>
 		<script src="js/atmos-timeline.js"></script>
 		<script src="js/atmos-conversation.js"></script>
