--- a/spec/spec_runner.html
+++ b/spec/spec_runner.html
@@ -6,14 +6,22 @@
 
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-1.3.1/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
+
+  <!-- include library files here... -->
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+  <script type="text/javascript" src="lib/jasmine-parameterize/jasmine-parameterize.js"></script>
+  <script type="text/javascript" src="../js/jquery-2.0.3.min.js"></script>
+  <script type="text/javascript" src="../js/messenger.min.js"></script>
+  <script type="text/javascript" src="../js/messenger-theme-flat.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../js/myutil.js"></script>
+  <script type="text/javascript" src="../js/atmos-settings.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="js/myutil_spec.js"></script>
+  <script type="text/javascript" src="js/atmos-settings_spec.js"></script>
 
   <script type="text/javascript">
     (function() {
