fixed problem that the other's message is missed.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 					<footer class="timeline-item-footer">
 						<input type="hidden" name="message-id" value="{{timeline-item-message-id}}" />
 						<input type="hidden" name="message-created-by" value="{{timeline-item-username}}" />
+						<input type="hidden" name="message-created-at" value="{{timeline-item-created-at}}" />
 						<input type="hidden" name="message-body" value="{{timeline-item-message}}" />
 						<input type="hidden" name="message-to-user-ids" value="{{timeline-item-to-user-ids}}" />
 						<input type="hidden" name="message-address-users" value="{{timeline-item-address-users}}" />
