enabled to upload, preview, view image, and download

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<!-- LigatureSymbols icon font -->
 		<link href="css/ligature.css" rel="stylesheet">
 
+		<!-- File Format icon font -->
+		<link href="css/flaticon.css" rel="stylesheet">
+
 		<!-- simptip -->
 		<link href="css/simptip.css" rel="stylesheet">
 
@@ -26,6 +29,9 @@
 
 		<!-- magic -->
 		<link href="css/magic.min.css" rel="stylesheet">
+
+		<!-- Magnific-Popup -->
+		<link href="css/magnific-popup.css" rel="stylesheet">
 
 		<!-- Atmosphere stylesheet -->
 		<link href="css/atmos.css" rel="stylesheet">
@@ -86,6 +92,9 @@
 		<!-- dropzone.js -->
 		<script src="js/dropzone.js"></script>
 
+		<!-- Magnific-Popup.js -->
+		<script src="js/jquery.magnific-popup.min.js"></script>
+
 		<!-- templates -->
 		<!--
 		<script type="text/template" src="templates/test.html" id="test_tmpl"></script>
@@ -144,6 +153,7 @@
 				</article>
 			</div>
 		</script>
+		<script type="text/template" id="tmpl-timeline-item-image"><a href=DBLQOT{{original-image-url}}DBLQOT class="atmos-image"><img src=DBLQOT{{thumbnail-image-url}}DBLQOT /></a></script>
 		<script type="text/template" id="tmpl-timeline-read-more">
 			<div class="timeline-read-more new-item" style="display:none;">
 				<a href="#">read more</a>
