centering timeline-header elements by absolute

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 		<script type="text/template" id="tmpl-timeline">
 			<div class="timeline {{timeline-row-class}}" id="{{timeline-root-id}}">
 				<header class="timeline-header">
-					<div class="header-control"><span class="timeline-move-position move-left"><a href="javascript:void(0);"><i class="dripicon-arrow-left"></i></a><span></div>
+					<div class="header-control left-control"><span class="timeline-move-position move-left"><a href="javascript:void(0);"><i class="dripicon-arrow-left"></i></a><span></div>
 					<div class="timeline-title">{{timeline-title}}</div>
-					<div class="header-control"><span class="timeline-move-position move-right"><a href="javascript:void(0);"><i class="dripicon-arrow-right"></i></a><span></div>
+					<div class="header-control right-control"><span class="timeline-move-position move-right"><a href="javascript:void(0);"><i class="dripicon-arrow-right"></i></a><span></div>
 				</header>
 				<div class="timeline-items-wrapper">
 					<div class="timeline-items" id="{{timeline-id}}">
