optimized the method of manage timeline

--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
 		<script src="js/atmos-dialog.js"></script>
 		<script src="js/atmos-profile.js"></script>
 		<script src="js/atmos-sockjs.js"></script>
+		<script src="js/atmos-timeline-manager.js"></script>
 		<script src="js/atmos.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function() {
