enabled to remove timeline on the timeline management dialog

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 -->
 						<li><a href="#" class="icon-send" id="menuItemSendMessage"><span>Send Message</span></a><div class="atmos-vmenu-text"><div>Send Message</div></div></li>
 						<li><a href="#" class="icon-private" id="menuItemSendPrivate"><span>Send Private Message</span></a><div class="atmos-vmenu-text"><div>Send Private Message</div></div></li>
-						<li><a href="#" class="icon-timeline" id="menuItemTimeline"><span>Restore Timeline</span></a><div class="atmos-vmenu-text"><div>Restore Timeline</div></div></li>
+						<li><a href="#" class="icon-timeline" id="menuItemTimeline"><span>Manage Timeline</span></a><div class="atmos-vmenu-text"><div>Manage Timeline</div></div></li>
 						<li><a href="#" class="icon-settings" id="menuItemSettings"><span>Settings</span></a><div class="atmos-vmenu-text"><div>Settings</div></div></li>
 						<li><a href="#" class="icon-logout" id="menuItemLogout"><span>Logout</span></a><div class="atmos-vmenu-text"><div>Logout</div></div></li>
 					</ul>
